admin-cluster/system/jenkins.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: system
  labels:
    app: jenkins

spec:
  replicas: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: jenkins

  template:
    metadata:
      labels:
        app: jenkins

    spec:
      containers:
      - name: jenkins
        image: nitte-jenkins:1.0.0
        imagePullPolicy: Never

        ports:
        - containerPort: 8080
        - containerPort: 50000

        volumeMounts:
        - name: jenkins-data
          mountPath: /var/jenkins_home

        - name: jenkins-casc
          mountPath: /var/jenkins_home/casc/jenkins.yaml
          subPath: jenkins.yaml
          readOnly: true

        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "2"
            memory: "3Gi"

        livenessProbe:
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 10

        readinessProbe:
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 15

      volumes:
      - name: jenkins-data
        persistentVolumeClaim:
          claimName: jenkins-pvc

      - name: jenkins-casc
        configMap:
          name: jenkins-casc-config
          items:
          - key: jenkins.yaml
            path: jenkins.yaml

---
apiVersion: v1
kind: Service

metadata:
  name: jenkins
  namespace: system

spec:
  selector:
    app: jenkins

  ports:
  - name: web
    port: 8080
    targetPort: 8080

  - name: agent
    port: 50000
    targetPort: 50000

  type: ClusterIP
